--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "react": "^16.6.0",
+    "react-checkbox-group": "^4.0.1",
     "react-dom": "^16.6.0",
     "react-scripts": "2.1.0"
   },
